--- a/src/main/resources/Bundle_es.properties
+++ b/src/main/resources/Bundle_es.properties
@@ -61,3 +61,6 @@ Interpolate=Interpolar entre posiciones
 UnableToGetPathsFromService=No se han podido obtener las rutas del servicio, por favor, int\u00e9ntelo de nuevo m\u00e1s tarde
 MonitorEachSmartDriver=Monitorizar cada SmartDriver
 RandomizeEachSmartDriver=Aleatorizar el comportamiento
+InfiniteSimulation=Simulaci\u00f3n sin fin
+Home=Hogar
+Workplace=Lugar de trabajo
